# piri-web

./: Dockerfile  Procfile  app.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: gcp_branch_follow_master.yml  heroku_branch_follow_master.yml  test.yml
docs/: index.md
piri_web/: app.py
tests/: bad_config.json  conftest.py  test_piri_web.py
